<resources>
    <string name="app_name">Almacenamiento Aerolinea</string>
    <string name="TipoUsuario">Tipo de Usuario: </string>
    <string name="Usuario"> No Seleccionado</string>

    <string name="Vuelos">Mostrar Vuelos</string>
    <string name="RegistroV">Registrar vuelo</string>
    <string name="RegistroA">Registrar Aerolinea</string>
    <string name="ReservacionesV">Mis vuelos reservados</string>
    <string name="Operador">Operador</string>
    <string name="Cliente">Cliente</string>

    <string name="Bienvenida">Bienvenido al Centro de Operaciones de Aerolinea LISS</string>
    <string name="IDAe">ID Aerolinea</string>
    <string name="IDAero">000</string>
    <string name="NombreAe">Nombre de la Aerolinea</string>
    <string name="NombreAero">Aerolinea CUFCP</string>
    <string name="NomAero">Aerolinea</string>

    <string name="Consulta">Buscar</string>
    <string name="Modificar">Modificar</string>
    <string name="Registrar">Registrar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="RegistrarVue">Registrar Vuelo</string>
    <string name="ReservarE">Reservar Vuelo</string>
    <string name="ReservarC">Reservar</string>

    <string name="Reservas">Reservaciones Disponibles</string>
    <string name="ConsultarR">Consultar Reservas</string>

    <string name="IDCliente">ID Cliente</string>
    <string name="NombreCliente">Nombre Cliente</string>
    <string name="Salida">Salir</string>
    <string name="IdVue">ID Vuelo</string>
    <string name="IdReser">ID Reserva</string>
    <string name="Origen">Origen</string>
    <string name="Destino">Destino</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Menus">Menu</string>
    <string name="Finalizar">Finalizar Programa</string>

</resources>