<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarVuelos">

    <TextView
        android:id="@+id/tvRegistroR"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/ReservarE"
        android:textColor="@color/Negro"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIdVuelo1"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:layout_marginStart="68dp"
        android:hint="@string/IdVue"
        android:inputType="number"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistroR" />

    <EditText
        android:id="@+id/etNomOrigen1"
        android:layout_width="269dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Origen"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdVuelo1" />

    <EditText
        android:id="@+id/etNomDestino1"
        android:layout_width="269dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:hint="@string/Destino"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomOrigen1" />


    <EditText
        android:id="@+id/etNomAero1"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:hint="@string/NomAero"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomDestino1" />

    <Button
        android:id="@+id/btnEliminar2"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/Eliminar"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnModificar2"
        app:layout_constraintTop_toBottomOf="@+id/etHora1" />

    <Button
        android:id="@+id/btnBuscar2"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/Consulta"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha1" />

    <Button
        android:id="@+id/btnModificar2"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/Modificar"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar2"
        app:layout_constraintTop_toBottomOf="@+id/etFecha1" />

    <EditText
        android:id="@+id/etFecha1"
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Fecha"
        android:inputType="date"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomAero1" />

    <EditText
        android:id="@+id/etHora1"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Hora"
        android:inputType="time"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/etFecha"
        app:layout_constraintTop_toBottomOf="@+id/etNomAero1" />

    <EditText
        android:id="@+id/etIdCliente"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:hint="@string/IDCliente"
        android:inputType="number"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar2" />

    <EditText
        android:id="@+id/etNomClien"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/NombreCliente"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etIdCliente"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminar2" />

    <Button
        android:id="@+id/btnReservarVu"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/ReservarC"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomClien" />

    <Button
        android:id="@+id/btnSalir2"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/Salida"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReservarVu" />

</androidx.constraintlayout.widget.ConstraintLayout>