<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarReservas">

    <TextView
        android:id="@+id/tvRegistroRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ConsultarR"
        android:textColor="@color/Negro"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIdReserva"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="68dp"
        android:hint="@string/IdReser"
        android:inputType="number"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistroRe" />

    <EditText
        android:id="@+id/etNomClien1"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:hint="@string/NombreCliente"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdReserva" />

    <EditText
        android:id="@+id/etNomAero2"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="25dp"
        android:hint="@string/NomAero"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomClien1" />

    <EditText
        android:id="@+id/etNomOrigen2"
        android:layout_width="269dp"
        android:layout_height="59dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Origen"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomAero2" />

    <EditText
        android:id="@+id/etNomDestino2"
        android:layout_width="269dp"
        android:layout_height="59dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Destino"
        android:inputType="text"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomOrigen2" />

    <EditText
        android:id="@+id/etFecha2"
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Fecha"
        android:inputType="date"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomDestino2" />

    <EditText
        android:id="@+id/etHora2"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Hora"
        android:inputType="time"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/etFecha2"
        app:layout_constraintTop_toBottomOf="@+id/etNomDestino2" />

    <Button
        android:id="@+id/btnBuscar3"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        android:text="@string/Consulta"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha2" />

    <Button
        android:id="@+id/btnModificar3"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        android:text="@string/Modificar"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar3"
        app:layout_constraintTop_toBottomOf="@+id/etFecha2" />

    <Button
        android:id="@+id/btnEliminar3"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        android:text="@string/Eliminar"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnModificar3"
        app:layout_constraintTop_toBottomOf="@+id/etHora2" />

    <Button
        android:id="@+id/btnSalir4"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/Salida"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificar3"
        app:layout_constraintVertical_bias="0.258" />

</androidx.constraintlayout.widget.ConstraintLayout>