<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTipoUsuario"
            android:layout_width="185dp"
            android:layout_height="39dp"
            android:text="@string/TipoUsuario"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="214dp"
            android:layout_height="36dp"
            android:text="@string/Usuario"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <View
            android:id="@+id/separador1"
            android:layout_width="21dp"
            android:layout_height="30dp"
            android:layout_margin="5sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnVuelos"
            android:layout_width="269dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Vuelos"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <View
            android:id="@+id/separador2"
            android:layout_width="21dp"
            android:layout_height="40dp"
            android:layout_margin="5sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnRegistroV"
            android:layout_width="269dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/RegistroV"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <View
            android:id="@+id/separador3"
            android:layout_width="21dp"
            android:layout_height="40dp"
            android:layout_margin="5sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnRegistroA"
            android:layout_width="349dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/RegistroA"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <View
            android:id="@+id/separador4"
            android:layout_width="21dp"
            android:layout_height="40dp"
            android:layout_margin="5sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnReservacion"
            android:layout_width="349dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ReservacionesV"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <View
            android:id="@+id/separador5"
            android:layout_width="21dp"
            android:layout_height="40dp"
            android:layout_margin="5sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="349dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Finalizar"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ibtnMePop"
        android:layout_width="75dp"
        android:layout_height="77dp"
        android:background="@drawable/btnredondo"
        android:contentDescription="@string/Menus"
        android:onClick="MenuPop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@mipmap/menup" />

</androidx.constraintlayout.widget.ConstraintLayout>